--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,15 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>SpringJwtAuthExample</name>
     <description>Spring Security JWT Authentication Example Project</description>
+
     <properties>
         <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
