--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-models</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <!-- Thanks for using https://jar-download.com -->
     </dependencies>
 
     <build>
