--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,15 @@
             <artifactId>cloudinary-core</artifactId>
             <version>1.35.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
         <!-- Thanks for using https://jar-download.com -->
     </dependencies>
 
